#
# Copyright Soramitsu Co., Ltd. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0
#

add_subdirectory(basic)
add_subdirectory(common)
add_subdirectory(connection)
add_subdirectory(crypto)
add_subdirectory(event)
add_subdirectory(injector)
add_subdirectory(multi)
add_subdirectory(muxer)
add_subdirectory(network)
add_subdirectory(peer)
add_subdirectory(protocol)
add_subdirectory(protocol_muxer)
add_subdirectory(security)
add_subdirectory(storage)
add_subdirectory(transport)
